[package]
name = "simple_server_utility"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssu"

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "*", features = [ "derive", "env" ] }
hcloud = { git = "https://github.com/HenningHolmDE/hcloud-rust", features = [ "rustls-tls" ], default-features = false }
tokio = { version = "*", features = [ "full" ] }
human-panic = "*"
tabled = "*"
serde_json = "*"
serde = { version = "*", features = [ "derive" ] }
toml = "*"

[build-dependencies]
clap = { version = "*", features = [ "derive", "env" ] }
clap_complete = "*"
